<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context="com.myagenda.myagenda.AddClassActivity">

    <EditText
        android:id="@+id/etClass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:ems="15"
        android:hint="@string/Class"
        android:inputType="text"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvStarts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="8:00"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btStarts"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@color/gray"
                android:text="@string/starts"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEnds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="10:00"
                android:textAlignment="center"
                android:textColor="@color/gray"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btEnds"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@color/gray"
                android:text="@string/ends"
                android:textColor="@color/white" />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btPickColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/orange"
        android:text="@string/pick_color"
        android:textColor="@color/white" />

</LinearLayout>
